# diskface

./: .SRCINFO  .gitignore  PKGBUILD  README.MD  config.json  disk_space_analyzer.py  diskface.py  diskspace.py  excludes.txt  excludes.txt~  install.sh  prune.py  pyproject.toml  requirements.txt  setup.py
diskface/: __diskface.py  config.json  diskface.py  excludes.txt  temp_paths.txt
diskface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
